src/tests/InvalidTests/TestRelational2.agl
a : Point = (1, 2);
b : Point = (3, 4);
c : Boolean = a > b; # Error: invalid relational expression (point or vector type)
